# pure_live_rust

./: .gitignore  ALTERNATIVE_TESTING.md  ANDROID_BUILD.md  APK_BUILD_QUICK_GUIDE.md  ARCHITECTURE.md  CREATE_REPO.md  DELIVERY_SUMMARY.md  FINAL_DELIVERY.md  PROGRESS.md  PUSH_NOW.md  PUSH_TO_GITHUB.md  QUICK_PUSH.md  QUICK_START.md  README.md  UI_DESIGN.md  build-android.sh  index.html  package-lock.json  package.json  push-to-github.sh
.github/workflows/: android-build-fixed.yml  android-build.yml  android-simple.yml  test.yml
src/: App.css  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  db.rs  error.rs  lib.rs  main.rs  player.rs
src-tauri/src/danmaku/: bilibili.rs  douyin.rs  douyu.rs  huya.rs  mod.rs
src-tauri/src/services/: mod.rs  supabase.rs  webdav.rs
src-tauri/src/sites/: bilibili.rs  cc.rs  douyin.rs  douyu.rs  huya.rs  kuaishou.rs  mod.rs
src/pages/: HomePage.css  HomePage.tsx  PlayerPage.css  PlayerPage.tsx
src/styles/: neumorphism.css
