[package]
name = "pure_live_rust"
version = "0.1.0"
description = "纯粹直播 - Rust 重构版"
authors = ["Morgan"]
edition = "2024"

[lib]
name = "pure_live_rust_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }

# 网络请求
reqwest = { version = "0.12", features = ["json", "cookies", "gzip"] }
tokio-tungstenite = "0.26"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# 数据解析
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.13"

# 视频播放
libmpv-sys = "3.1"

# 数据库
rusqlite = { version = "0.32", features = ["bundled"] }

# 加密
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"

# 工具
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1.0"
once_cell = "1.21"
parking_lot = "0.12"

# 时间
chrono = "0.4"

# URL 解析
url = "2.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
